        PR tree-optimization/50802         * tree-vrp.c (simplify_conversion_using_ranges): Rewrite test         considering what happens to ranges during sign changes and/or         intermediate narrowing conversions.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@181880 138bc75d-0d04-0410-961f-82ee72b054a4